infra/k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-api
  labels:
    app: currency-api
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: currency-api
  type: LoadBalancer
