infra/k8s/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: currency-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: currency-api
              servicePort: 80
